ver.2.11: 初期画面表示

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,5 +22,4 @@ html body p {
 }
 .menu__item:not(:first-child):before {
   content: "| ";
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
